--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ setTimeout(atualizarContador, 1000);
             
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/8yj82EU" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/DSn0lfK" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO EMAGRECER!</span>
               </a>
             </div>
