--- a/ps/index.html
+++ b/ps/index.html
@@ -15,7 +15,7 @@
           <p>Toque em "Descobrir"</p>
         </div>
         <div class="answer">
-          <a class="btn" href="">DESCOBRIR</a>
+          <a class="btn" href="https://segredovietnamita.online/">DESCOBRIR</a>
         </div>
       </div>    
     </div>
