--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ setTimeout(atualizarContador, 1000);
             
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/DSn0lfK" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO EMAGRECER!</span>
+              <a href="https://pay.kiwify.com.br/nCMxgAR" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">ATENÇÃO! SÓ HOJE POR R$47,00</span>
               </a>
             </div>
              <br>
